WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224056
Share same code between network process termination and crash handling
https://bugs.webkit.org/show_bug.cgi?id=224056
Summary
Share same code between network process termination and crash handling
Chris Dumez
Reported
2021-04-01 10:25:17 PDT
Share same code between network process termination and crash handling. This would avoid bugs such as
Bug 224022
.
Attachments
Patch
(9.49 KB, patch)
2021-04-01 10:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2021-04-01 10:30:03 PDT
Created
attachment 424911
[details]
Patch
Alex Christensen
Comment 2
2021-04-01 11:59:17 PDT
Comment on
attachment 424911
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424911&action=review
> Source/WebKit/UIProcess/WebsiteData/WebsiteDataStore.cpp:-1745 > - processPool->terminateServiceWorkers();
Does this have a replacement?
Chris Dumez
Comment 3
2021-04-01 12:01:06 PDT
Comment on
attachment 424911
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424911&action=review
> Source/WebKit/UIProcess/WebProcessPool.cpp:484 > m_automationSession->terminate();
Yes, networkProcessDidTerminate() gets called on termination now and terminates the service workers 2 lines below here.
EWS
Comment 4
2021-04-01 15:27:25 PDT
Committed
r275389
: <
https://commits.webkit.org/r275389
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424911
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-04-01 15:28:14 PDT
<
rdar://problem/76124951
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug